# craft-ai-starterkit-jupyter

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: build.yml
data/: craftai.csv  craftai_std.csv
src/: Benchmark.ipynb  Benchmarks.ipynb  Generators.ipynb  Main.ipynb  NYC_Yellow_Cabs_Main.ipynb  NYC_Yellow_Cabs_Preprocessing.ipynb  Preprocessing.ipynb  Tools.py  craft.ipynb
