[tool.poetry]
name = "craft-ai-starterkit-jupyter"
version = "0.1.0"
description = ""
authors = ["craft ai <support@craft.ai>"]

[tool.poetry.dependencies]
python = "3.8.1"
craft-ai = {version = "2.00rc5", extras = ["pandas"]}
jupyter = "^1.0.0"
python-dotenv = "^0.12.0"
seaborn = "^0.9.0"
scikit-learn = "^0.22.1"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
